k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elyzian-api
  namespace: elyzian
spec:
  type: ClusterIP
  selector:
    app: elyzian-api
  ports:
    - port: 3000
      targetPort: 3000
