k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elyzian-web
  namespace: elyzian
spec:
  type: ClusterIP
  selector:
    app: elyzian-web
  ports:
    - port: 80
      targetPort: 80
